# Master-en-Genie-Logiciel

Semestre 1/: ce qu'il reste à mettre
Semestre 1/ACT - Algorithmes et complexités/Hexpawn/: Hexpawn.cpp
Semestre 1/ACT - Algorithmes et complexités/La classe NP/: La classe NP.odt  README.md  classeNP.cpp
Semestre 1/ACT - Algorithmes et complexités/Le plus grand rectangle/: DiviserPourRegner.java  Le plus grand rectangle.odt  README.md  Theta_N.java  Theta_N2.java  Theta_N3.java
Semestre 1/PJE - Projet encadré/: README.md
Semestre 1/PJE - Projet encadré/Partie 1/: Partie 1.Rmd  Partie 1.nb.html  Partie-1.html
Semestre 1/PJE - Projet encadré/Partie 2/: Diapo Partie 2.odp  Notes Partie 2.odt
Semestre 1/SD - Science des données/DS Distanciel/: Exam1-2020.ipynb  Exam1_-_2020_-_Correction.ipynb
Semestre 1/SD - Science des données/TP1/: Intro-Boston-Correction.ipynb  Intro-Boston.ipynb
Semestre 1/SD - Science des données/TP2/: Listes et Numpy.ipynb  algos.py
Semestre 1/SD - Science des données/TP3/: Petits exercices algebre lineaire.ipynb
Semestre 1/SD - Science des données/TP4/: Broadcast - Correction.ipynb  Broadcast.ipynb  (+2 more)
Semestre 2/COA - Conception Objet Avancée/TP1 - Stack/src/: CMakeLists.txt  main.cpp  stack.cpp
Semestre 2/COA - Conception Objet Avancée/TP2 - Formes/src/: CMakeLists.txt  ShapeGroup.cpp  circle.cpp  main.cpp  rect.cpp  shape.cpp  shape_main.cpp  triangle.cpp
Semestre 2/Compil - Compilation des logiciels/: README.md  compil.py  interprete.py  pretty-printer.py
Semestre 2/PJI - Projet Individuel/: Makefile  README.md
(+245 files in other folders)
